[project]
name = "rng-modules"
version = "0.1.0"
description = "Hardware and software random number generator modules for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyserial>=3.5",
    "pyusb>=1.3.1",
    "textual>=7.5.0",
]

[project.scripts]
rng-tui = "rng_tui:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "hardware: Mark tests requiring hardware devices",
    "async: Mark async tests"
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
]
cli = [
    "textual>=0.47.0",
]
